[package]
name = "musicproject"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
rodio = "0.13"
serde = { version = "1.0", features = ["derive", "serde_json"] }
tokio = { version = "1", features = ["full", "macros"] }